omni/tests/goldens/types/undefined_ident_10.err
tests/goldens/types/undefined_ident_10.omni:1:20: error: undefined identifier "missing10"
  let result10:int = missing10
                     ^~~ hint: declare the name before using it
